--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "mist"
+name = "mist_typing"
 dynamic = ["version"]
 description = "multi-locus sequence typing (MLST) and cgMLST"
 readme = "README.md"
